1592534494 | 70 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_japanese.txt,  M content/vrmonitor/translations/vrmonitor_errors_latam.txt,  M c
https://steamdb.info/patchnotes/5187122/

--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -2614,5 +2614,15 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Изобразяване на графика за производителността"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"Нормален кадър"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"Повторна проекция със заглаждане за движението"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"Повторна проекция без заглаждане за движението"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"Екранна грешка"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"Приложението изиска дроселиране (обвързано с процесора)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
