--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -951,12 +951,12 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Vikasietotila"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Äskettäisen kaatumisen <span>vuoksi</span> SteamVR toimii nyt vikasietotilassa. <p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Lisätietoja</a>."
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Poista vikasietotila käytöstä"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Joitain lisäosia estetty"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Äskettäisen kaatumisen <span>vuoksi</span> joitain SteamVR:n lisäosia on estetty. <p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Lisätietoja</a>."
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Hallinnoi lisäosia"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "Error_VRServerNotRunning_ActionURL"	"vrmonitor://restartsystem"
@@ -979,12 +979,12 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR-virhe"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"SteamVR kohtasi HDCP-virheen. Luo SteamVR-järjestelmäraportti lisätietoja varten."
-"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
-"Warning_DismissableWarning_HDCPError_Action"	"Lisätietoja"
-"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
-"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
-"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description"	"Grafiikkasuoritin ei pysty kommunikoimaan VR-lasien kanssa, se aiheuttaa HDCP-virheen. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile grafiikkasuorittimen toista porttia, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasit, jotta grafiikkasuoritin yrittää yhdistää uudelleen.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Lisätietoja</a>."
+"[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
+"Warning_DismissableWarning_HDCPError_Action"	"Nollaa VR-lasit"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
@@ -1253,7 +1253,7 @@
 "[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Näytön yhteysongelma"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
-"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Näytönohjaimesi ei voi yhdistää virtuaalitodellisuuslaitteesi (HMD) näyttöön. Poista kaikki kaapelin adapterit ja lisäosat ja kokeile uudellen. Kokeile toista porttia grafiikkasuorittimessa, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi virtuaalitodellisuuslaitteesi, jotta grafiikkasuoritin kokeilee yhdistämistä uudelleen.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Näytönohjaimesi ei voi yhdistää VR-lasien näyttöön. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile grafiikkasuorittimen toista porttia, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasisi, jotta grafiikkasuoritin yrittää yhdistää uudelleen.</b>"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Nollaa VR-lasit"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
@@ -1267,5 +1267,17 @@
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Esituotantolaitettasi %1 ei enää tueta.</font><br><br>Tähän laitteeseen ei enää tule ohjelmistopäivityksiä, eikä toimivuutta voida taata. Käytä toista laitetta mahdollisimman pian.<br><br>(hwid: %2)"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet"	"OpenXR runtimea ei ole asetettu."
+"[english]Warning_OpenXRDefaultRuntimePrompt_NotSet"	"The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"OpenXR runtime on asetettu toiseen SteamVR-versioon."
+"[english]Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"The OpenXR runtime is currently set to another version of SteamVR."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR ei ole asetettu oletukseksi OpenXR runtimeen."
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"Tämä saattaa estää joidenkin sovellusten käynnistämisen. %1"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Aseta oletukseksi"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 }
 }
