--- a/content/vrmonitor/translations/vrmonitor_errors_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_french.txt
@@ -235,7 +235,7 @@
 "[english]VRInitError_Driver_RuntimeOutOfDate_Header"	"SteamVR Error"
 "VRInitError_Driver_RuntimeOutOfDate_Description"	"Votre logiciel Oculus semble obsolète, veuillez installer la dernière version."
 "[english]VRInitError_Driver_RuntimeOutOfDate_Description"	"Your Oculus software appears to be out of date. Please install the latest version."
-"VRInitError_Driver_RuntimeOutOfDate_Action"	"Rendez-vous sur oculus.com"
+"VRInitError_Driver_RuntimeOutOfDate_Action"	"Accéder à oculus.com"
 "[english]VRInitError_Driver_RuntimeOutOfDate_Action"	"Visit oculus.com"
 "VRInitError_Driver_HmdInUse_Header"	"Erreur de SteamVR"
 "[english]VRInitError_Driver_HmdInUse_Header"	"SteamVR Error"
@@ -301,7 +301,7 @@
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"SteamVR Error"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR n'a pas réussi à se connecter à l'application Oculus. Veuillez-vous assurer que la dernière version est installée."
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Description"	"SteamVR was unable to connect to the Oculus app. Please make sure you have the latest version installed."
-"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Rendez-vous sur oculus.com"
+"VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Accéder à oculus.com"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action"	"Visit oculus.com"
 "VRInitError_VendorSpecific_HmdFound_CantOpenDevice_Header"	"Erreur USB"
 "[english]VRInitError_VendorSpecific_HmdFound_CantOpenDevice_Header"	"USB Error"
@@ -555,7 +555,7 @@
 "[english]Popover_FirmwareUpdateNeededWarning_Description"	"It's time to update this device."
 "Popover_FirmwareUpdateNeededWarning_Action"	"Plus d'informations"
 "[english]Popover_FirmwareUpdateNeededWarning_Action"	"More info"
-"Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Mise à jour du périphérique"
+"Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Mettre à jour le périphérique"
 "[english]Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Update device"
 "Popover_ConnectionRefusedBySteam_Header"	"Erreur Steam"
 "[english]Popover_ConnectionRefusedBySteam_Header"	"Steam Error"
@@ -565,7 +565,7 @@
 "[english]Popover_DirectModeDriverUpdate_Header"	"Update Graphics Drivers"
 "Popover_DirectModeDriverUpdate_Description"	"Pour activer le mode d'affichage direct, veuillez mettre à jour les pilotes vidéo. La version %1 est installée, mais le mode direct nécessite la version %2"
 "[english]Popover_DirectModeDriverUpdate_Description"	"To enable Direct Display Mode, please update your video drivers. Version %1 is installed, but Direct Display Mode requires version %2"
-"Popover_DirectModeDriverUpdate_Action"	"Télécharger les drivers"
+"Popover_DirectModeDriverUpdate_Action"	"Télécharger les pilotes"
 "[english]Popover_DirectModeDriverUpdate_Action"	"Download Drivers"
 "VRInitError_Init_InterfaceNotFound_ActionURL"	" "
 "[english]VRInitError_Init_InterfaceNotFound_ActionURL"	""
@@ -927,7 +927,7 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"More info"
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/fr/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
-"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Mettez à jour le pilote graphique"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Mise à jour du pilote graphique"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
 "Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"SteamVR fonctionne mieux avec un pilote graphique à jour. Nous vous recommandons de mettre à jour le vôtre dès maintenant.	"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"SteamVR performs best with an up-to-date graphics driver. We recommend that you update yours now."
@@ -955,12 +955,12 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Mode sans échec"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Suite à un <span>plantage</span>, SteamVR est actuellement lancé en mode sans échec.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Cliquez ici pour plus d'informations</a>."
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Désactiver le mode sans échec"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Plusieurs extensions ont été bloquées"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Suite à un <span>plantage</span>, certaines extensions de SteamVR ont été bloquées.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=french'>Cliquez ici pour plus d'informations</a>."
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Gérer les extensions"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "Error_VRServerNotRunning_ActionURL"	"vrmonitor://restartsystem"
@@ -983,12 +983,12 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"Erreur de SteamVR"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"SteamVR a rencontré une erreur HDCP. Veuillez créer un rapport système SteamVR pour plus d'informations."
-"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
-"Warning_DismissableWarning_HDCPError_Action"	"Plus d'informations"
-"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
-"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/fr/wizard/HelpWithGame/?appid=250820"
-"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description"	"Votre <span>carte graphique</span> rencontre des problèmes de connexion avec votre casque, ce qui entraîne une erreur HDCP. Si vous utilisez des câbles adaptateurs ou des rallonges, essayez de les déconnecter. Essayez également de connecter votre casque à un autre port de votre carte graphique, si vous en avez plusieurs. <b>Cliquez sur le bouton de réinitialisation ci-dessous pour réinitialiser votre casque et permettre à la carte graphique de tenter de rétablir la connexion.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237&l=french'>Cliquez ici pour plus d'informations</a>."
+"[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
+"Warning_DismissableWarning_HDCPError_Action"	"Réinitialiser le casque"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/fr/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/fr/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
@@ -1031,7 +1031,7 @@
 "[english]VRInitError_IPC_ConnectFailedAfterMultipleAttempts_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
 "VRInitError_Compositor_D3D11HardwareRequired_Header"	"Mise à jour requise"
 "[english]VRInitError_Compositor_D3D11HardwareRequired_Header"	"Time to Upgrade"
-"VRInitError_Compositor_D3D11HardwareRequired_Description"	"Aucun pilote ni matériel compatible avec DirectX 11 n'a été trouvé par SteamVR. Vous devrez peut-être mettre à jour votre configuration."
+"VRInitError_Compositor_D3D11HardwareRequired_Description"	"Aucun pilote ni matériel compatible avec DirectX 11 n'a été trouvé par SteamVR. Vous devrez peut-être mettre à jour votre système."
 "[english]VRInitError_Compositor_D3D11HardwareRequired_Description"	"SteamVR was unable to locate DirectX 11 compatible hardware or drivers.  You may need to upgrade your system."
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_ActionURL"	"https://www.oculus.com/rift-patch/"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_ActionURL"	"https://www.oculus.com/rift-patch/"
@@ -1217,7 +1217,7 @@
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Un problème s'est produit lors de l'installation de l'environnement d'exécution d'Oculus. Veuillez redémarrer votre ordinateur et vérifier que le logiciel Oculus est installé et à jour."
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
-"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Rendez-vous sur oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Accéder à oculus.com"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/?update_locale=fr_FR"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
@@ -1273,5 +1273,17 @@
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Votre %1 de préproduction n'est plus pris(e) en charge.</font> <br><br> Ce périphérique ne recevra plus de mise à jour de firmware, et ne pourra pas être totalement fonctionnel. Veuillez le remplacer dès que possible. <br><br>(identifiant de matériel : %2)"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet"	"L'environnement d'exécution d'OpenXR n'est pas défini."
+"[english]Warning_OpenXRDefaultRuntimePrompt_NotSet"	"The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"La version de l'environnement d'exécution d'OpenXR correspond à une autre version de SteamVR."
+"[english]Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"The OpenXR runtime is currently set to another version of SteamVR."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR n'est pas défini comme l'environnement d'exécution par défaut d'OpenXR."
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"Cela peut empêcher certaines applications de se lancer correctement. %1"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Définir par défaut"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 }
 }
