--- a/content/vrmonitor/translations/vrmonitor_errors_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_german.txt
@@ -959,12 +959,12 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Abesicherter Modus"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Aufgrund</span> eines kürzlichen Absturzes läuft SteamVR im abgesicherten Modus.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Weitere Infromationen</a>"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Abgesicherten Modus deaktivieren"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Einige Add-ons blockiert"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Aufgrund</span> eines kürzlichen Absturzes wurden einige Add-ons für SteamVR blockiert.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Weitere Informationen</a>"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Add-ons verwalten"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "Error_VRServerNotRunning_ActionURL"	"vrmonitor://restartsystem"
@@ -987,12 +987,12 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR-Fehler"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"Bei SteamVR ist ein HDCP-Fehler aufgetreten. Bitte erstellen Sie einen SteamVR-Systembericht, um weitere Informationen zu erhalten."
-"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
-"Warning_DismissableWarning_HDCPError_Action"	"Weitere Informationen"
-"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
-"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/wizard/HelpWithGame/?appid=250820"
-"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description"	"<span>Ihre</span> Grafikkarte hat Probleme dabei, mit Ihrem VR-Headset zu kommunizieren, wodurch ein HDCP-Fehler aufgetreten ist. Bitte entfernen Sie alle Kabeladapter und -verlängerungen. Testen Sie einen anderen Anschluss an Ihrer Grafikkarte, falls vorhanden. <b>Klicken Sie auf den Link unten, um das VR-Headset zurückzusetzen, damit die Grafikkarte es erneut versuchen kann.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Weitere Informationen</a>"
+"[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
+"Warning_DismissableWarning_HDCPError_Action"	"VR-Headset zurücksetzen"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
@@ -1275,5 +1275,17 @@
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Ihre Vorserie \"%1\" wird nicht mehr unterstützt.</font> <br><br> Dieses Gerät wird keine Firmware-Updates erhalten und eine reduzierte Funktionalität ist zu erwarten. Bitte ersetzen Sie es so schnell wie möglich. <br><br>(hwid: %2)"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet"	"Die OpenXR-Laufzeit ist zurzeit nicht festgelegt."
+"[english]Warning_OpenXRDefaultRuntimePrompt_NotSet"	"The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"Die OpenXR-Laufzeit ist zurzeit auf eine andere Version von SteamVR festgelegt."
+"[english]Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"The OpenXR runtime is currently set to another version of SteamVR."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR ist nicht als Standard-OpenXR-Laufzeit festgelegt."
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"Dies kann dazu führen, dass einige Anwendungen nicht korrekt gestartet werden können. %1"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Als Standard festlegen"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 }
 }
