--- a/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
@@ -957,12 +957,12 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Csökkentett mód"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Egy közelmúltbeli összeomlás <span>miatt</span> a SteamVR jelenleg csökkentett módban működik.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>További információ</a>."
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Csökkentett mód kikapcsolása"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Egyes kiegészítők blokkolva"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Egy közelmúltbeli összeomlás <span>miatt</span> néhány SteamVR kiegészítő blokkolva lett.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=hungarian'>További információ</a>."
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Kiegészítők kezelése"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "Error_VRServerNotRunning_ActionURL"	"vrmonitor://restartsystem"
@@ -985,12 +985,12 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR hiba"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"A SteamVR HDCP hibát tapasztalt. További információkért hozz létre SteamVR rendszerjelentést."
-"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
-"Warning_DismissableWarning_HDCPError_Action"	"Több infó"
-"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
-"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/hu/wizard/HelpWithGame/?appid=250820"
-"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description"	"A <span>GPU</span>-d nem tud kommunikálni a HMD-vel, ami HDCP-hibát okoz. Próbáld eltávolítani a kábeladaptereket vagy -hosszabbítókat, ha használsz ilyet. Próbálj meg egy másik portot a GPU-don, ha van rajta. <b>Használd a lenti újraindítás gombot a HMD újraindításához, hogy a GPU újrapróbálja a kapcsolódást.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237&l=hungarian'>További információ</a>."
+"[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
+"Warning_DismissableWarning_HDCPError_Action"	"Fejszett újraindítása"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/hu/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/hu/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
@@ -1287,5 +1287,17 @@
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Gyártás-előkészítő %1 eszközöd már nem támogatott.</font> <br><br> Ez az eszköz többet nem fog firmware-frissítéseket kapni, és csökkent működőképesség várható. Kérjük, cseréld ki, amint tudod. <br><br>(Hardverazonosító: %2)"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet"	"Az OpenXR futásidejű jelenleg nincs beállítva."
+"[english]Warning_OpenXRDefaultRuntimePrompt_NotSet"	"The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"Az OpenXR futásidejű jelenleg a SteamVR egy másik verziójára van beállítva."
+"[english]Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"The OpenXR runtime is currently set to another version of SteamVR."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"A SteamVR nincs beállítva alapértelmezett OpenXR futásidejűként."
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"Ez megakadályozhatja egyes alkalmazások megfelelő elindítását. %1"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Alapértelmezettre"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 }
 }
