--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -2101,9 +2101,9 @@
 "[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
 "Advanced_PerfGraphInHMD"	"Εμφάνιση γραφήματος επιδόσεων GPU στο headset"
 "[english]Advanced_PerfGraphInHMD"	"Display GPU performance graph in headset"
-"Advanced_ReprojectionOn"	"Αναπροβολή ενεργή"
+"Advanced_ReprojectionOn"	"Επαναπροβολή ενεργή"
 "[english]Advanced_ReprojectionOn"	"Reprojection On"
-"Advanced_ReprojectionOff"	"Αναπροβολή ανενεργή"
+"Advanced_ReprojectionOff"	"Επαναπροβολή ανενεργή"
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"Καταστολή ειδοποιήσεων VR και συναγερμών σε ελαχιστοποίηση"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
@@ -2133,17 +2133,17 @@
 "[english]Settings_BaseStation_BaseStation10"	"Base Station 1.0"
 "Settings_BaseStation_BaseStation20"	"Σταθμός βάσης 2.0"
 "[english]Settings_BaseStation_BaseStation20"	"Base Station 2.0"
-"Settings_Advanced_MotionReprojection_Header"	"Αναπροβολή κίνησης"
+"Settings_Advanced_MotionReprojection_Header"	"Επαναπροβολή κίνησης"
 "[english]Settings_Advanced_MotionReprojection_Header"	"Motion Reprojection"
 "Settings_Advanced_MotionReprojection_Description"	"Το SteamVR συνθέτει νέα καρέ για να διατηρήσει μια καλή εμπειρία όταν η εφαρμογή που τρέχει δεν μπορεί να αποδώσει το ρυθμό καρέ."
 "[english]Settings_Advanced_MotionReprojection_Description"	"SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
-"Settings_Advanced_MotionReprojection"	"Ενεργοποίηση αναπροβολής κίνησης"
+"Settings_Advanced_MotionReprojection"	"Ενεργοποίηση επαναπροβολής κίνησης"
 "[english]Settings_Advanced_MotionReprojection"	"Enable Motion Reprojection"
-"Settings_Advanced_MotionReprojection_Disabled"	"Η κίνηση αναπροβολής δεν είναι διαθέσιμη. Απαιτεί Windows 10 και μία %1 GPU με οδηγούς %2 ή νεότερους."
+"Settings_Advanced_MotionReprojection_Disabled"	"Η κίνηση επαναπροβολής δεν είναι διαθέσιμη. Απαιτεί Windows 10 και μία %1 GPU με οδηγούς %2 ή νεότερους."
 "[english]Settings_Advanced_MotionReprojection_Disabled"	"Motion Reprojection is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
-"Settings_Advanced_MotionReprojection_Disabled_AMD"	"Η κίνηση αναπροβολής  δεν είναι προς το παρόν διαθέσιμη σε υλισμικό AMD."
+"Settings_Advanced_MotionReprojection_Disabled_AMD"	"Η κίνηση επαναπροβολής δεν είναι προς το παρόν διαθέσιμη σε υλισμικό AMD."
 "[english]Settings_Advanced_MotionReprojection_Disabled_AMD"	"Motion Reprojection is currently unavailable on AMD hardware."
-"Settings_PerApplication_MotionReprojection_Header"	"Κίνηση αναπροβολής"
+"Settings_PerApplication_MotionReprojection_Header"	"Κίνηση επαναπροβολής"
 "[english]Settings_PerApplication_MotionReprojection_Header"	"Motion Reprojection"
 "Settings_PerApplication_MotionReprojection_On"	"Ενεργή"
 "[english]Settings_PerApplication_MotionReprojection_On"	"On"
@@ -2155,11 +2155,11 @@
 "[english]Settings_PerApplication_MotionReprojection_Checkbox_ForceOn"	"Override Global Setting and Force On"
 "Settings_PerApplication_MotionReprojection_Checkbox_ForceOff"	"Παράκαμψη καθολικής ρύθμισης και απενεργοποίηση εξαναγκαστικά"
 "[english]Settings_PerApplication_MotionReprojection_Checkbox_ForceOff"	"Override Global Setting and Force Off"
-"Advanced_MotionReprojection_Active"	"Ενεργή κίνηση αναπροβολής"
+"Advanced_MotionReprojection_Active"	"Ενεργή κίνηση επαναπροβολής"
 "[english]Advanced_MotionReprojection_Active"	"Motion Reprojection On"
-"Advanced_MotionReprojection_NotActive"	"Ανενεργή κίνηση αναπροβολής"
+"Advanced_MotionReprojection_NotActive"	"Ανενεργή κίνηση επαναπροβολής"
 "[english]Advanced_MotionReprojection_NotActive"	"Motion Reprojection Off"
-"Advanced_MotionReprojection_Disabled"	"Κίνηση αναπροβολής μη διαθέσιμη"
+"Advanced_MotionReprojection_Disabled"	"Κίνηση επαναπροβολής μη διαθέσιμη"
 "[english]Advanced_MotionReprojection_Disabled"	"Motion Reprojection Unavailable"
 "Advanced_BaseStation"	"Σταθμός βάσης"
 "[english]Advanced_BaseStation"	"Base Station"
@@ -2609,5 +2609,15 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Εμφάνιση γραφήματος επιδόσεων"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"Κανονικό καρέ"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"Επαναπροβλήθηκε με εξομάλυνση κίνησης"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"Επαναπροβλήθηκε χωρίς εξομάλυνση κίνησης"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"Σφάλμα προβολής"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"Η εφαρμογή αιτήθηκε περιορισμό (δέσμευση cpu)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
