--- a/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
@@ -952,11 +952,11 @@
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "Warning_DismissableWarning_SteamVRInSafeMode_Header"	"セーフモード"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
 "Warning_DismissableWarning_SteamVRInSafeMode_Description"	"最近発生したクラッシュの<span>ため</span>、SteamVRは現在セーフモードで動作しています。<p>詳細は<a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>こちら</a>です。"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "Warning_DismissableWarning_SteamVRInSafeMode_Action"	"セーフモードを無効化"
-"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "Error_VRServerNotRunning_ActionURL"	"vrmonitor://restartsystem"
@@ -980,11 +980,11 @@
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVRエラー"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
 "Warning_DismissableWarning_HDCPError_Description"	"SteamVRでHDCPエラーが発生しました。詳細な情報を得るには、SteamVRシステムレポートを作成してください。"
-"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
+"[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"詳細情報"
-"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
 "Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/ja/wizard/HelpWithGame/?appid=250820"
-"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/ja/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/ja/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
