--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -1053,7 +1053,7 @@
 "[english]DismissableWarning_DismissButton"	"Dismiss"
 "DismissableWarning_OpticalBasestationSyncWarning"	"Попередження оптичної синхронізації базової станції (0x0004)"
 "[english]DismissableWarning_OpticalBasestationSyncWarning"	"Optical Base Station Sync Warning (0x0004)"
-"DismissableWarning_BasestationSingleBaseModeHint"	"Підказка щодо роботи одиночної базової станції (0x0008)"
+"DismissableWarning_BasestationSingleBaseModeHint"	"Підказка щодо режиму однієї базової станції (0x0008)"
 "[english]DismissableWarning_BasestationSingleBaseModeHint"	"Base Station Single Base Mode Hint (0x0008)"
 "Explanation_RemoveAllSteamVRUSBDevices"	"Вилучіть всі пов’язані зі SteamVR пристрої USB із системи для повторної інсталяції їхніх драйверів."
 "[english]Explanation_RemoveAllSteamVRUSBDevices"	"Remove all USB devices related to SteamVR from this system to reinstall drivers."
@@ -2616,5 +2616,15 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Показати графік швидкодії"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"Нормальний кадр"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"Репроектовано зі згладжуванням рухів"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"Репроектовано без згладжування рухів"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"Помилка екрана"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"Запитані застосунком обмеження (пов’язані з ЦП)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
